# symbiflow-arch-defs

./: .gitmodules  .travis.yml  CMakeLists.txt  environment.yml  requirements.txt
quicklogic/devices/: CMakeLists.txt
quicklogic/devices/polarpro-3e-top-routing-virt/: CMakeLists.txt
quicklogic/devices/unnamed-dev-type/: CMakeLists.txt
quicklogic/qlf_k6n10/tests/design_flow/: CMakeLists.txt
quicklogic/qlf_k6n10/tests/design_flow/IR_Remote/: CMakeLists.txt
quicklogic/qlf_k6n10/tests/design_flow/VexRiscv/: CMakeLists.txt
quicklogic/qlf_k6n10/tests/design_flow/adder_128/: CMakeLists.txt
quicklogic/qlf_k6n10/tests/design_flow/adder_8/: CMakeLists.txt
quicklogic/qlf_k6n10/tests/design_flow/adder_FFs/: CMakeLists.txt
quicklogic/qlf_k6n10/tests/design_flow/bram/: CMakeLists.txt
quicklogic/qlf_k6n10/tests/design_flow/cavlc_top/: CMakeLists.txt
quicklogic/qlf_k6n10/tests/design_flow/clock_tree_design/: CMakeLists.txt
quicklogic/qlf_k6n10/tests/design_flow/conv2d/: CMakeLists.txt
quicklogic/qlf_k6n10/tests/design_flow/conv2d_no_ksa/: CMakeLists.txt
quicklogic/qlf_k6n10/tests/design_flow/counter/: CMakeLists.txt
quicklogic/qlf_k6n10/tests/design_flow/counter_16bit/: CMakeLists.txt
quicklogic/qlf_k6n10/tests/design_flow/counter_4clk/: CMakeLists.txt
quicklogic/qlf_k6n10/tests/design_flow/e_sdio_host_controller/: CMakeLists.txt
quicklogic/qlf_k6n10/tests/design_flow/full_adder/: CMakeLists.txt
quicklogic/qlf_k6n10/tests/design_flow/io_reg_tc1/: CMakeLists.txt
quicklogic/qlf_k6n10/tests/design_flow/io_tc1/: CMakeLists.txt
quicklogic/qlf_k6n10/tests/design_flow/jpeg_qnr/: CMakeLists.txt
quicklogic/qlf_k6n10/tests/design_flow/lut4_8ffs/: CMakeLists.txt
quicklogic/qlf_k6n10/tests/design_flow/multi_enc_decx2x4/: CMakeLists.txt
quicklogic/qlf_k6n10/tests/design_flow/routing_test/: CMakeLists.txt
quicklogic/qlf_k6n10/tests/design_flow/sdio_client_top/: CMakeLists.txt
quicklogic/qlf_k6n10/tests/design_flow/shift_reg_1024/: CMakeLists.txt
quicklogic/qlf_k6n10/tests/design_flow/shift_reg_576/: CMakeLists.txt
quicklogic/qlf_k6n10/tests/design_flow/shift_reg_8/: CMakeLists.txt
quicklogic/qlf_k6n10/tests/design_flow/spi_master_top/: CMakeLists.txt
(+404 files in other folders)
